--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,7 +74,7 @@ stages:
         deploy:
           steps:
           - task: AzureWebApp@1
-            displayName: 'Deploy Azure Web App : ourwebsite'
+            displayName: 'Deploy Azure Web App ourwebsite'
             inputs:
               azureSubscription: $(azureSubscription)
               appName: $(webAppName)
