--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ trigger:
 variables:
   # Azure Resource Manager connection created during pipeline creation
   azureSubscription: 'Pipeeline'
-  azureSubscriptionID: 'eeb9dfdd-9c17-44c3-a4a0-7529399ce200'
+  azureSubscriptionID: 'Pipeeline'
 
   # Web app name
   webAppName: 'ourwebsite'
