Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -76,7 +76,7 @@ stages:
           - task: AzureWebApp@1
             displayName: 'Deploy Azure Web App ourwebsite'
             inputs:
-              azureSubscription: '$(azureSubscription)'
+              azureSubscription: 'Pipeeline'
               appType: 'webAppLinux'
               appName: '$(webAppName)'
               package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
